--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="color">MD ABUSAYED</span> WORLD</h1>
+            <h3>Web Developer and Digital Marketer</h3>
+            <p>Hello! This is MD ABUSAYED, a Web Developer and Google certified Digital Marketer with a demonstrated
+                history
+                of
+                serving in the software and
+                marketing industry for over three years. I have experienced in Social Media Marketing, Social Media
+                Advertising,
+                Search Engine Optimization, Website Development, Facebook Ads, Google Ads and PPC Campaign. Energetic
+                engineering professional with a Bachelor in Computer Science and Engineering focused on Computer Science
+                from
+                "International University Of Business Agriculture and Technology".</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sayedsstory">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/sayed1.png" alt="ABUSAYED">
+        </div>
+    </section>
 </body>
+
 </html>
