--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <h1>Welcome To</h1>
             <h1><span class="color">MD ABUSAYED</span> WORLD</h1>
             <h3>Web Developer and Digital Marketer</h3>
-            <p>Hello! This is MD ABUSAYED, a Web Developer and Google certified Digital Marketer with a demonstrated
+            <p class="display">Hello! This is MD ABUSAYED, a Web Developer and Google certified Digital Marketer with a
+                demonstrated
                 history
                 of
                 serving in the software and
@@ -32,6 +33,19 @@
         </div>
         <div class="half-width">
             <img src="images/sayed1.png" alt="ABUSAYED">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/sayed2.png" alt="ABUSAYED">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p class="display">I already learned HTML CSS Git. I can create a simple website using HTML and
+                CSS. My Goal is to build 3
+                websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">Download Resume</a>
         </div>
     </section>
 </body>
